start building puppet files